# ros_basics

./: .data  .env  .gitignore  Dockerfile.laptop  Dockerfile.pi  JOYSTICK_SETUP.md  LICENSE  README.md  arduino_motor_control.ino  docker-compose.pc.yml  docker-compose.pi.yml  docker-compose.yml  frames_2026-05-30_12.47.17.gv  frames_2026-05-30_12.51.37.gv  frames_2026-06-04_06.12.59.gv  frames_2026-06-16_03.44.50.gv  map_1780603864.pgm  map_1780603864.yaml  my_gazebo_map.pgm  my_gazebo_map.yaml  my_gazebo_map1.pgm  my_robot.gv  robot.urdf
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_bringup/config/: my_robot_controllers.yaml  teleop_joy.yaml
src/my_robot_bringup/launch/: build_real_source_launch.sh  build_source_launch.sh  my_robot_gazebo.launch.py  my_robot_real.launch.py
src/my_robot_bringup/scripts/: micro_ros_bridge.py  twist_converter.py
src/my_robot_description/: CMakeLists.txt  nav2_params.yaml  package.xml
src/my_robot_description/config/: ekf.yaml  gazebo_bridge.yaml  my_robot_controllers.yaml
src/my_robot_description/launch/: display.launch.py
src/my_robot_description/maps/: frames_2026-06-04_12.00.40.gv  industrial-warehouse-mdf.pgm  industrial-warehouse-mdf.xcf  industrial-warehouse.pgm  industrial-warehouse.yaml  ionic.pgm  ionic.yaml  my_first_map.pgm  my_first_map.yaml
src/my_robot_description/models/Industrial Empty Shelf/: model.config  model.sdf
src/my_robot_description/models/Ionic Mascot/: model.config  model.sdf
src/my_robot_description/models/STEAK_SET/: metadata.pbtxt  model.config  model.sdf
src/my_robot_description/models/Tugbot/: model.sdf
src/my_robot_description/rviz/: gazebo.rviz  my_robot.rviz
src/my_robot_description/test/: test_ekf.py
src/my_robot_description/urdf/: camera.xacro  common_properties.xacro  gazebo.xacro  imu.xacro  lidar.xacro  mobile_base.ros2_control.xacro  mobile_base.xacro  mobile_base_gazebo.xacro  my_robot.urdf.xacro
src/my_robot_description/worlds/: sample.sdf  sample_world.sdf  table.sdf  tugbot_worlds.sdf  warehouse.sdf  warehouse_1.sdf  warehouse_1.sdf.config
src/my_robot_description/worlds/Ionic World/: ionic.sdf
src/my_robot_description/worlds/Ionic_World/: ionic.sdf
src/my_robot_description/worlds/Jetty World/: jetty.sdf
src/my_robot_description/worlds/industrial-warehouse/: industrial-warehouse.sdf
src/my_robot_description/worlds/living_room/: living_room.sdf
src/my_robot_description/worlds/robosub25_bottle/: model.config
(+68 files in other folders)
